# Shapeshifter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  integrate.txt  shapeshifter.desktop
.github/workflows/: build.yml
debian/shapeshifter/DEBIAN/: control  postinst  postrm  prerm
debian/shapeshifter/usr/lib/shapeshifter/: shapeshifter
debian/shapeshifter/usr/share/applications/: shapeshifter-restore.desktop
debian/shapeshifter/usr/share/doc/shapeshifter/: copyright
debian/shapeshifter/usr/share/polkit-1/actions/: org.lilith.shapeshifter.policy
src/: main.rs
ui/: appwindow.slint  appwindow.slint.bak
