[package]
name = "shapeshifter"
version = "1.0.0"
edition = "2021"

[dependencies]
slint = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.4"
tar = "0.4"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
slint-build = "1.3"
